[tool.poetry]
name = "eigen_decomp exploration"
version = "0.1.0"
description = "exploring around in eigendecomp and some compression"
authors = ["graham seamans"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
